--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
             color: #fff;
             text-align: center;
             padding: 20px;
-            position: fixed;
+            position:relative;
             left: 0;
             bottom: 0;
             width: 100%;
