--- a/templates/index.html
+++ b/templates/index.html
@@ -3,109 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/styles1.css">
     <title>Wine Quality Prediction</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        .container {
-            max-width: 600px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        h2 {
-            text-align: center;
-        }
-        form {
-            display: grid;
-            grid-gap: 10px;
-        }
-        label {
-            font-weight: bold;
-        }
-        input[type="number"] {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-             /* Remove spinners */
-            -moz-appearance: textfield;
-            appearance: textfield;
-        }
-        input[type="submit"] {
-            width: 100%;
-            padding: 10px;
-            background-color: #4caf50;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-
-        /* CSS styles for footer */
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-            position:relative;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    
 </head>
-<body>
 
-<div class="container">
+<body>
+    
+    <div class="container">
+      
     <h2>Wine Quality Prediction</h2>
     <form action="{{ url_for('predict') }}" method="POST">
         <label for="fixedAcidity">Fixed Acidity:</label>
-        <input type="number" id="fixedAcidity" name="fixedAcidity"   placeholder="Fixed Acidity eg. 11" step="0.000001" inputmode="decimal" required>
+        <input type="number" id="fixedAcidity" name="fixedAcidity"   placeholder="Fixed Acidity eg. 11" step="1" inputmode="decimal" required>
         
         <label for="volatileAcidity">Volatile Acidity:</label>
-        <input type="number" id="volatileAcidity" name="volatileAcidity"  placeholder="Volatile eg. 0.3" step="0.000001" inputmode="decimal" required>
+        <input type="number" id="volatileAcidity" name="volatileAcidity"  placeholder="Volatile eg. 0.3" step="0.1" inputmode="decimal" required>
         
         <label for="citricAcid">Citric Acid:</label>
-        <input type="number" id="citricAcid" name="citricAcid"   placeholder="Citric acid eg. 0.58" step="0.0000001" inputmode="decimal" required>
+        <input type="number" id="citricAcid" name="citricAcid"   placeholder="Citric acid eg. 0.58" step="0.01" inputmode="decimal" required>
         
         <label for="residualSugar">Residual Sugar:</label>
-        <input type="number" id="residualSugar" name="residualSugar"  placeholder="residual_sugar eg. 2.1" step="0.00000001" inputmode="decimal" required>
+        <input type="number" id="residualSugar" name="residualSugar"  placeholder="residual_sugar eg. 2.1" step="0.1" inputmode="decimal" required>
         
         <label for="chlorides">Chlorides:</label>
-        <input type="number" id="chlorides" name="chlorides"  placeholder="chlorides eg. 0.054" step="0.00000001" inputmode="decimal" >
+        <input type="number" id="chlorides" name="chlorides"  placeholder="chlorides eg. 0.054" step="0.001" inputmode="decimal" required>
         
         <label for="freeSulfurDioxide">Free Sulfur Dioxide:</label>
-        <input type="number" id="freeSulfurDioxide" name="freeSulfurDioxide" placeholder="free_sulphur_dioxide eg. 7" step="0.0000001" inputmode="decimal" required>
+        <input type="number" id="freeSulfurDioxide" name="freeSulfurDioxide" placeholder="free_sulphur_dioxide eg. 7" step="1" inputmode="decimal" required>
         
         <label for="totalSulfurDioxide">Total Sulfur Dioxide:</label>
-        <input type="number" id="totalSulfurDioxide" name="totalSulfurDioxide" placeholder="total_sulphur_dioxide eg. 19" step="0.0000001" inputmode="decimal" required>
+        <input type="number" id="totalSulfurDioxide" name="totalSulfurDioxide" placeholder="total_sulphur_dioxide eg. 19" step="1" inputmode="decimal" required>
         
         <label for="density">Density:</label>
-        <input type="number" id="density" name="density"  placeholder="density eg. 0.998" step="0.0000001" inputmode="decimal" required>
+        <input type="number" id="density" name="density"  placeholder="density eg. 0.998" step="0.001" inputmode="decimal" required>
         
         <label for="pH">pH:</label>
-        <input type="number" id="pH" name="pH"  placeholder="ph eg. 3.31" step="0.00000001" inputmode="decimal" required>
+        <input type="number" id="pH" name="pH"  placeholder="ph eg. 3.31" step="0.001" inputmode="decimal" required>
         
         <label for="sulphates">Sulphates:</label>
-        <input type="number" id="sulphates" name="sulphates"  placeholder="sulphates eg. 0.88 " step="0.0000001" inputmode="decimal" required>
+        <input type="number" id="sulphates" name="sulphates"  placeholder="sulphates eg. 0.88 " step="0.001" inputmode="decimal" required>
         
         <label for="alcohol">Alcohol:</label>
-        <input type="number" id="alcohol" name="alcohol"  placeholder="alcohol eg. 10.5" step="0.00000001" inputmode="decimal" required>
+        <input type="number" id="alcohol" name="alcohol"  placeholder="alcohol eg. 10.5" step="0.1" inputmode="decimal" required>
         
         <input type="submit" value="Predict">
     </form>
 </div>
+<script>
+        function moveToNextField(event, nextFieldId) {
+            if (event.keyCode === 13) { // Check if Enter key is pressed
+                event.preventDefault(); // Prevent default form submission behavior
+                
+                var nextField = document.getElementById(nextFieldId);
+                if (nextField) {
+                    nextField.focus(); // Move focus to the next field
+                }
+            }
+        }
+    </script>
 
 
     <!-- Footer -->
