--- a/templates/result.html
+++ b/templates/result.html
@@ -3,34 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/styles.css">
     <title>Wine Quality Prediction Result</title>
 
-    <style>
-        /* CSS styles for footer */
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+
 </head>
 <body>
-    <h2>Prediction Result</h2>
-    {% if prediction == 0 %}
-        <p>The predicted wine quality is: Bad Quality</p>
-    {% elif prediction == 1 %}
-        <p>The predicted wine quality is: Good Quality</p>
-    {% endif %}
+    <!-- Header -->
+    <header style="background-color: #333; color: white; text-align: center; padding: 20px;  width: auto;">
+        <h1>Wine Quality Prediction</h1>
+    </header>
 
-    
+    <!-- Background image -->
+    <div class="bg"></div> 
+
+
+    <!-- Main content -->
+    <div class="container">
+        <h2>Prediction Result</h2>
+        {% if prediction == 0 %}
+            <p>The predicted wine quality is: Bad Quality</p>
+        {% elif prediction == 1 %}
+            <p>The predicted wine quality is: Good Quality</p>
+        {% endif %}
+    </div>
+
     <!-- Footer -->
     <footer>
         <p>Copyright © 2024 Wine Quality Prediction. All rights reserved.</p>
+
     </footer>
 </body>
 </html>
